增加赞助商信息

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -38,11 +38,19 @@ jobs:
             
             # 检查从tag到现在，go-gost目录下的文件是否有变化
             TAG_COMMIT=$(git rev-list -n 1 "${{ env.VERSION }}")
-            if git diff --quiet $TAG_COMMIT HEAD -- go-gost/; then
-              echo "✅ GOST files unchanged since tag"
+            echo "Tag commit: $TAG_COMMIT"
+            echo "Current HEAD: $(git rev-parse HEAD)"
+            
+            # 检查 go-gost 目录下是否有实际的文件内容变化
+            # 使用 --ignore-all-space 和 --ignore-blank-lines 来忽略空白差异
+            # 使用 --exit-code: 0表示无差异，1表示有差异
+            if git diff --quiet --ignore-all-space --ignore-blank-lines $TAG_COMMIT HEAD -- go-gost/ 2>/dev/null; then
+              echo "✅ GOST files unchanged since tag (no content changes)"
               echo "should_build_gost=false" >> $GITHUB_OUTPUT
             else
-              echo "🔄 GOST files changed since tag, will rebuild GOST binary"
+              # 显示差异以便调试
+              echo "🔄 Detected changes in go-gost directory:"
+              git diff --stat $TAG_COMMIT HEAD -- go-gost/ || true
               echo "should_build_gost=true" >> $GITHUB_OUTPUT
             fi
           else
